--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,15 @@
 /* ---------- HEADER / NAVBAR ---------- */
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .Po {
   width: 100%;
   height: 150px;
