--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,15 +12,16 @@ html, body {
 
 .Po {
   width: 100%;
-  height: 150px;
+  min-height: 120px;
   background-color: rgb(49, 210, 60);
-  font-size: 45px;
-  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 15px;
   flex-wrap: wrap;
+  padding: 10px;
 }
+
 
 .active {
   background-color: rgb(101, 219, 95);
