--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,16 +35,18 @@ body {
 }
 
 button {
-  width: 200px;
+  max-width: 200px;
+  width: 100%;
   height: 50px;
   background-color: rgb(145, 210, 49);
   font-size: 22px;
   text-align: center;
   border-radius: 5px;
-  margin: 15px;
+  margin: 10px;
   border: 3px solid rgb(49, 210, 60);
   cursor: pointer;
 }
+
 
 button:hover {
   background-color: rgba(101, 219, 95, 0.52);
